# remotescript

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: black.yaml  build-check.yaml  mypy.yaml  release-publish.yaml  ruff.yaml  test-publish.yaml
ci/: make_stubs.py  mypy.sh
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  usage.rst
docs/examples/: simple.rst
docs/source/: modules.rst  remoterunner.rst  remotescript.rst  trtutils.rst  trtutils.trtexec.rst
examples/: example_config.cfg  example_config.json  simple.py
scripts/: clear_remote_run_dirs.py
src/remoterunner/: __init__.py  __main__.py  _core.py  _imports.py  _utils.py
src/remotescript/: __init__.py  __main__.py  _core.py  _imports.py  _utils.py
tests/: test_namespace.py
